--- a/examen2_programovil_q3_24/pubspec.yaml
+++ b/examen2_programovil_q3_24/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.4.1
+  go_router: ^14.2.7
+  cloud_firestore: ^5.4.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +21,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
